--- a/Interdiciplinariedad/historia-programacion_pag.html
+++ b/Interdiciplinariedad/historia-programacion_pag.html
@@ -6,17 +6,17 @@
     <title>Historia de la programación</title>
     <style>
         body {
-            background-color: #000000; /* Color de fondo estilo modo oscuro de iOS */
-            color: #EFEFEF; /* Color de texto */
-            font-family: 'Helvetica Neue', sans-serif; /* Fuente similar a iOS */
+            background-color: #000000; 
+            color: #EFEFEF; 
+            font-family: 'Helvetica Neue', sans-serif; 
             margin: 0;
             padding: 20px;
-            text-align: center; /* Centrar el contenido del cuerpo */
+            text-align: center; 
         }
 
         h1 {
             font-size: 32px;
-            color: #007AFF; /* Color de encabezado estilo iOS */
+            color: #007AFF; 
         }
 
         p {
@@ -24,14 +24,14 @@
         }
 
         img {
-            display: block; /* Hacer que la imagen sea un bloque para centrarla */
-            margin: 20px auto; /* Centrar la imagen horizontalmente con espacio en la parte superior e inferior */
+            display: block; 
+            margin: 20px auto; 
         }
     </style>
 </head>
 <body>
     <h1>Historia de la programación</h1>
     <p>La programación ha evolucionado significativamente a lo largo de la historia. Desde los primeros lenguajes de programación como Fortran y COBOL en la década de 1950, hasta los modernos lenguajes de alto nivel como Python y JavaScript, la programación ha desempeñado un papel crucial en el avance de la tecnología y la informática.</p>
-    <img src="tu-imagen.jpg" alt="Tu imagen" width="300"> <!-- Agrega la ruta de tu imagen en src y ajusta el ancho según sea necesario -->
+    <img src="tu-imagen.jpg" alt="Tu imagen" width="300">
 </body>
 </html>
